# sqlite-clone

./: CMakeLists.txt
include/: database.h  database_client.h  database_server.h  query_parser.h
src/: database.cpp  database_client.cpp  database_server.cpp  main.cpp  query_parser.cpp
